--- a/src/sections/about.pug
+++ b/src/sections/about.pug
@@ -1,5 +1,5 @@
 section.about
-    .container.container--about
+    .container.container__about
         .about__left
             .user
                 +image('content/user.jpg', 'user__pic')
