--- a/src/sections/reviews.pug
+++ b/src/sections/reviews.pug
@@ -1,32 +1,35 @@
 section.reviews
     .reviews__top-block 
-        h2.reviews__title Что обо мне говорят
-        .reviews__arrows
-            .reviews__arrows_left.reviews__arrows__circle
-                +icon('arrow-right', 'reviews__arrows__circle_icon')
-            .reviews__arrows_right.reviews__arrows__circle
-                +icon('arrow-right', 'reviews__arrows__circle_icon')
-    
-    .reviews__container
-        .reviews__block
-            .reviews__quotes
-                +icon('quote', 'reviews__quotes_icon')
-            .reviews__content
-                article.reviews__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
-                .reviews__person
-                    .reviews__person_left
-                        +image('content/user.jpg', 'reviews__person_image')
-                    .reviews__person_right
-                        .reviews__person_name Ковальчук Дмитрий
-                        .reviews__person_position Основатель Loftschool
-        .reviews__block
-            .reviews__quotes
-                +icon('quote', 'reviews__quotes_icon')
-            .reviews__content
-                article.reviews__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
-                .reviews__person
-                    .reviews__person_left
-                            +image('content/user.jpg', 'reviews__person_image')
-                    .reviews__person_right
-                        .reviews__person_name Владимир Сабанцев
-                        .reviews__person_position Преподаватель
+        h2.title.reviews__title Что обо мне говорят
+        //- .reviews__arrows
+        //-     .reviews__arrows_left.reviews__arrows__circle
+        //-         +icon('arrow-right', 'reviews__arrows__circle_icon')
+        //-     .reviews__arrows_right.reviews__arrows__circle
+        //-         +icon('arrow-right', 'reviews__arrows__circle_icon')
+        .reviews__buttons
+            button.button.reviews__button.button--circle
+                +icon('arrow-right', 'button__arrow')
+            button.button.reviews__button.button--circle
+                +icon('arrow-right', 'button__arrow button__arrow--left')
+    .feedback
+        .quotes
+            +icon('quote', 'quotes__icon')
+        .feedback__content
+            article.content.feedback__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
+            .person
+                .person__left
+                    +image('content/user.jpg', 'person__avatar')
+                .person__right
+                    .person__name Ковальчук Дмитрий
+                    .person__occ Основатель Loftschool
+    .feedback
+        .quotes
+            +icon('quote', 'quotes__icon')
+        .feedback__content
+            article.content.feedback__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
+            .person
+                .person__left
+                    +image('content/user.jpg', 'person__avatar')
+                .person__right
+                    .person__name Владимир Сабанцев
+                    .person__occ Предприниматель
