--- a/src/styles/sections/works.pcss
+++ b/src/styles/sections/works.pcss
@@ -1,164 +1,14 @@
 .works {
-    text-align: left;
-    padding: 150px 160px 65px;
-    width: 100vw;
-    text-align: center;
-
-    &__title {
-        color: #2b3948;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 48px;
-        text-align: left;
-    }
-    &__content {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        padding-top: 90px;
-    }
     &__left {
-        width: 80%;
-        padding-right: 160px;
+        width: 60%;
     }
     &__right {
-        width: 20%;
-        text-align: left;
-    }
-    &__preview {
-        position: relative;
-        width: 100%;
-    }
-    &__image {
-        &_big {
-            width: 100%;
-        }
-        &_small {
-            transition: ease-in-out .2s;
-            border: 0 solid #f29400;
-
-            &:hover {
-                /* margin: 0 2px; */
-                border: 3px solid #f29400;
-                transition: ease-in-out .2s;
-            }
-        }
-    }
-    &__slider {
-        padding: 60px;
-        padding-right: 0;
-        bottom: 0;
-        height: 220px;
-        overflow: hidden;
-        position: absolute;
-        z-index: 2;
-        right: 0;
-    }
-    &__image_small {
-        float: left;
-        height: 100%;
-        cursor: pointer;
-    }
-    &__controlls {
-        position: absolute;
-        bottom: 0;
-        right: -160px;
-        width: 160px;
-        height: 100%;
-    }
-    &__number {
-        color: #f0f0f0;
-        font-size: 400px;
-        font-weight: 900;
-        line-height: 1;
-        height: 355px;
-        bottom: 160px;
-        right: 0;
-        position: absolute;
-        z-index: -1;
-    }
-    &__buttons {
-        position: absolute;
-        bottom: 60px;
-        left: 0;
-
-        &_square {
-            width: 50px;
-            height: 50px;
-            background-color: #2d3c4e;
-            display: block;
-            fill: #fff;
-
-            &:hover {
-                fill: #f29400;
-            }
-        }
-    }
-
-    &__arrow{
-        &_right, &_left {
-            width: 8px;
-            height: 10px;
-            transition:  ease-in-out .2s;
-
-            &.disabled {
-                fill: #fff !important;
-                opacity: .3;
-            }
-        }
-        &_left {
-            transform: rotate(180deg);
-        }
-    }
-
-    &__tags {
-        padding-bottom: 40px;
-
-        &_item {
-            border-radius: 23px;
-            background-color: rgba(122, 160, 197, .1);
-            display: inline-block;
-            margin-right: 15px;
-            margin-bottom: 15px;
-            padding: 12px 20px;
-            color: rgba(40, 51, 64, .7);
-            font-size: 15px;
-            font-weight: 600;
-        }
+        width: 30%;
     }
 
     &__description {
-        &_title {
-            color: #2d3c4e;
-            font-size: 30px;
-            font-weight: 700;
-            line-height: 48px;
+        .content {
             padding-bottom: 40px;
-        }
-        &_content {
-            opacity: 0.7;
-            color: #2b3948;
-            font-size: 16px;
-            font-weight: 600;
-            line-height: 30px;
-            padding-bottom: 40px;
-        }
-        &_link {
-
-            span {
-                color: #4b6fd7;
-                font-size: 18px;
-                font-weight: 700;
-                line-height: 48px;
-                display: inline-block;
-            }
-        }
-        &_icon {
-            display: inline-block;
-            margin-right: 20px;
-            width: 15px;
-            height: 15px;
-            fill: #4b6fd7;
         }
     }
 }
