--- a/src/styles/blocks/content.pcss
+++ b/src/styles/blocks/content.pcss
@@ -10,4 +10,9 @@
         font-style: italic;
         font-weight: 500;
     }
+
+    &--dark {
+        color: #2b3948;
+        opacity: 0.7;
+    }
 }
