--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -1,4 +1,5 @@
-.skills {
+.skills-list {
+
     &__item {
         color: rgba(255, 255, 255, .5);
         font-size: 18px;
@@ -8,20 +9,19 @@
         vertical-align: top;
         margin-right: 30px;
         margin-bottom: 30px;
-
-        &_container {
-            width: 135px;
-            height: 135px;
-            border: 3px solid transparent;
-            border-radius: 135px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        &_name {
-            text-align: center;
-        }
+        width: 126px;
+        height: 126px;
     }
+    &__name {
+        text-align: center;
+    }
+    &__skill {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     &__level {
         position: absolute;
         left: 50%;
@@ -31,19 +31,14 @@
     }
 
     &__circle {
-        &_under {
+        &--under {
             stroke: #fff;
             opacity: .1;
         }
-        &_above {
+        &--above {
             stroke: orange;
             stroke-width: 9px;
             stroke-dasharray: 100 346;
         }
-    }
-
-    &-image {
-        margin-bottom: -155px;
-        margin-left: -160px;
     }
 }
