--- a/src/styles/sections/reviews.pcss
+++ b/src/styles/sections/reviews.pcss
@@ -4,121 +4,20 @@
     &__top-block {
         display: block;
         padding-bottom: 90px;
+        padding: 40px;
     }
     &__title {
-        color: #fff;
         font-size: 36px;
-        font-weight: 700;
         line-height: 48px;
-        padding-bottom: 40px;
         margin-right: 100px;
         display: inline-block;
         vertical-align: top;
     }
-    &__arrows {
+    &__buttons {
         display: inline-block;
-        &__circle {
-            width: 50px;
-            height: 50px;
-            display: inline-block;
-            border: 3px solid #fff;
-            border-radius: 50%;
-            transition: ease-in-out .2s;
-            cursor: pointer;
-            position: relative;
-
-            &_icon {
-                width: 8px;
-                height: 10px;
-                display: block;
-                fill: #fff;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                transition: ease-in-out .2s;
-
-                &:hover {
-                    fill: #f29400;
-                }
-            }
-
-            &:hover {
-                border: 3px solid #f29400;
-
-                svg {
-                    fill: #f29400;
-                }
-            }
-        }
-        &_left {
-            margin-right: 30px;
-            transform: rotate(180deg);
-        }
-        
     }
-    &__container {
-
-    }
-    &__block {
+    .button {
         display: inline-block;
-        margin-right: 50px;
-        vertical-align: top;
-    }
-    &__quotes {
-        display: inline-block;
-        margin-right: 30px;
-        vertical-align: top;
-
-        &_icon {
-            width: 75px;
-            height: 63px;
-            fill: #ffffff;
-            opacity: 0.05;
-        }
-    }
-    &__content {
-        display: inline-block;
-        width: 350px;
-    }
-    &__article {
-        opacity: 0.5;
-        color: #fff;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 30px;
-        display: block;
-        margin-bottom: 30px;;
-    }
-    &__person {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        &_left {
-            display: inline-block;
-        }
-        &_right {
-            display: inline-block;
-        }
-        &_image {
-            width: 75px;
-            height: 75px;
-            margin-right: 30px;
-            border-radius: 50%;
-            display: block;
-        }
-        &_name {
-            color: #fff;
-            font-size: 18px;
-            font-weight: 700;
-            display: block;
-            margin-bottom: 10px;
-        }
-        &_position {
-            opacity: 0.3;
-            color: #fff;
-            font-weight: 700;
-            display: block;
-        }
+        margin-right: 20px;
     }
 }
