--- a/src/sections/reviews.pug
+++ b/src/sections/reviews.pug
@@ -1,6 +1,6 @@
 section.reviews
     .reviews__top-block 
-        h2.title.reviews__title Что обо мне говорят
+        h2.title.reviews__title.title--big Что обо мне говорят
         //- .reviews__arrows
         //-     .reviews__arrows_left.reviews__arrows__circle
         //-         +icon('arrow-right', 'reviews__arrows__circle_icon')
