--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -12,6 +12,11 @@
         padding-bottom: 15px;
     }
 
+    &--big {
+        font-size: 36px;
+        line-height: 48px;
+    }
+
     &--dark {
         color: #2b3948;
     }
