--- a/src/styles/blocks/button.pcss
+++ b/src/styles/blocks/button.pcss
@@ -33,4 +33,16 @@
             border-color: #f29400;
         }
     }
+    &--send {
+        padding: 20px 90px;
+        width: auto;
+        height: auto;
+        background-image: linear-gradient(to right, #ea7400 0%, #f29400 100%);
+        border: none;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 48px;
+        text-transform: uppercase;
+    }
 }
