--- a/src/styles/sections/contact.pcss
+++ b/src/styles/sections/contact.pcss
@@ -1,92 +1,8 @@
 .contact {
-    &__title {
-        color: #fff;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 48px;
-        padding-bottom: 40px;
-        display: block;
-    }
-    &__form {
-        &__field {
-            border-bottom: 2px solid #fff;
-            display: inline-block;
-            margin-right: 50px;
-            width: 410px;
-            vertical-align: top;
-        }
-        &_left, &_right {
-            display: inline-block;
-
-            &--message {
-                padding-top: 50px;
-                vertical-align: top;
-            }
-        }
-    }
-    &__user {
-        display: block;
-        margin-bottom: 40px;
-
-        &_name {
-            display: inline-block;
-            vertical-align: top;
-        }
-
-        &_email {
-            display: inline-block;
-            vertical-align: top;
-        }
-
-        &_icon {
-            width: 30px;
-            height: 30px;
-            fill: #fff;
-            opacity: 0.3;
-            margin-right: 20px;
-            display: inline-block;
-        }
-    }
-    &__message {
-        display: block;
-        margin-top: 40px;
-    }
-
-    &__input {
-        background: transparent;
-        border: none;
-        outline: none;
-        display: block;
-        width: 360px;
-        color: #fff;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 48px;
-    }
-    &__user_field-name {
-        display: block;
-        opacity: 0.3;
-        color: #ffffff;
-        font-size: 16px;
-        font-weight: 600;
-        line-height: 30px;
-    }
-    .button {
+    
+    .button-block {
         display: block;
         margin-top: 50px;
-
-        &__send {
-            width: 347px;
-            height: 80px;
-            background-image: linear-gradient(to right, #ea7400 0%, #f29400 100%);
-            border: none;
-            color: #fff;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 48px;
-            text-transform: uppercase;
-            cursor: pointer;
-        }
     }
         
 }
