--- a/src/sections/contact.pug
+++ b/src/sections/contact.pug
@@ -1,26 +1,27 @@
 section.contact
     h2.title.title--big Связаться со мной
 
-    form.form
-        .form-data
-            .form__field.user__name
+    form.form(id="message")
+        .form__block
+            .form__field
                 .form__left  
-                    +icon('user', 'contact__user_icon')
+                    +icon('user', 'form__icon')
                 .form__right
-                    label.form__field Ваше имя
+                    label.form__label Ваше имя
                     input(type="text" name="name").form__input
-            .form__field.user__email
+            .form__field
                 .form__left 
-                    +icon('envelope', 'contact__user_icon')
+                    +icon('envelope', 'form__icon')
                 .form__right
-                    label.form__field Введите выш email
+                    label.form__label Введите выш email
                     input(type="text" name="email").form__input
-        .form__field.message
-            .form__left.form_left--message
-                +icon('message', 'contact__user_icon')
-            .form__right
-                label.form__field Сообщение к письму
-                textarea(name="message").form__input
+        .form__block
+            .form__field
+                .form__left.form__left--message
+                    +icon('message', 'form__icon')
+                .form__right
+                    label.form__label Сообщение к письму
+                    textarea(name="message").form__input
         .button-block
-            input(type="submit" value="Отправить").button.button--send
+            button(type="submit" value="Отправить" form="message").button.button--send Отправить
 
