--- a/src/sections/footer.pug
+++ b/src/sections/footer.pug
@@ -1,9 +1,9 @@
 footer.footer
     .footer__left
-        .footer__copyright  &copy; 2019
-        .footer__user
-            .footer__user_name Сергей Дмитриев
-            .footer__user_info Личный сайт веб-разработчика
+        .copyright  &copy; 2019
+        .hero-title.footer__hero-title
+            .hero-title__name.footer__hero-name Сергей Дмитриев
+            .hero-title__info.footer__hero-info Личный сайт веб-разработчика
     .footer__right
         .footer__menu
             +nav('footer__nav', ['Главная',
@@ -14,13 +14,13 @@ footer.footer
                 'Связаться'], 3)
         .footer__bottom
             .footer__info
-                .footer__info_about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                .footer__socials
-                    ul.footer__socials__list
+                .content.footer__about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                .socials
+                    ul.socials__list
                         each social in ['insta', 'vk', 'github']
-                            li.footer__socials__item
-                                a(href="#").footer__socials__link
-                                    +icon(`${social}`, `${social}`)
-            .footer__quote
-                article.footer__quote_article Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живёте 
-                .footer__quote_name Martin Golding
+                            li.socials__item
+                                a(href="#").socials__link.socials__link--circle
+                                    +icon(`${social}`, `${social} socials__icon`)
+            .quote.footer__quote
+                article.quote__article Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живёте 
+                .quote__name Martin Golding
