--- a/src/styles/blocks/hero-title.pcss
+++ b/src/styles/blocks/hero-title.pcss
@@ -10,8 +10,10 @@
         display: inline-block;
         width: 165px;
         vertical-align: top;
+        text-align: right;
 
         &--small {
+            text-align: left;
             width: auto;
             display: block;
             font-size: 16px;
@@ -29,6 +31,7 @@
         line-height: 60px;
         text-align: left;
         margin-left: 60px;
+        vertical-align: top;
 
         &--small {
             font-weight: 700;
