--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -6,39 +6,80 @@
         align-items: center;
         justify-content: space-between;
 
-        .insta {
-            margin-left: 40px;
-            width: 25px;
+        .socials__icon {
             fill: #fff;
-            opacity: .3;
             transition: ease-in-out .2s;
-            &:hover {
-                opacity: 1;
-            }
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .insta {
+            /* margin-left: 40px; */
+            width: 25px;
         }
         .vk {
-            margin-left: 40px;
+            /* margin-left: 40px; */
             width: 31px;
-            fill: #fff;
-            opacity: .3;
-            transition: ease-in-out .2s;
-            &:hover {
-                opacity: 1;
-            }
         }
         .github {
-            margin-left: 40px;
+            /* margin-left: 40px; */
             width: 27px;
+        }
+
+        .socials__item {
+            display: inline-block;
+        }
+        .socials__icon {
             fill: #fff;
-            opacity: .3;
             transition: ease-in-out .2s;
-            &:hover {
-                opacity: 1;
-            }
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
     }
+    &__link {
+        margin-left: 20px;
+        width: 50px;
+        height: 50px;
+        display: block;
+        position: relative;
+        transition: ease-in-out .2s;
+        opacity: 0.3;
 
-    &__item {
-        display: inline-block;
+        &:hover {
+            opacity: 1;
+        }
+
+        &--circle {
+            margin-right: 20px;
+            width: 50px;
+            height: 50px;
+            display: block;
+            position: relative;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            transition: ease-in-out .2s;
+
+            .insta {
+                width: 20px;
+            }
+            .vk {
+                width: 25px;
+            }
+            .github {
+                width: 22px;
+            }
+
+            &:hover {
+                border-color: #ff9a00;
+
+                .socials__icon {
+                    fill: #ff9a00;
+                }
+            }
+        }
     }
 }
