--- a/src/sections/hero.pug
+++ b/src/sections/hero.pug
@@ -1,8 +1,8 @@
-section.hero
+section.hero.parallax__layer
     .container.container__hero
         include header
 
-        h1.hero-title
+        h1.hero-title.hero-title--parallax
             .hero-title__info Личный сайт веб разработчика
             .hero-title__name Сергей Дмитриев
 
