--- a/src/styles/blocks/hero-title.pcss
+++ b/src/styles/blocks/hero-title.pcss
@@ -46,4 +46,10 @@
     &__about {
         margin-bottom: 25px;
     }
+
+    &--parallax {
+        position: absolute;
+        top: 0%;
+        transform: translateY(200%);
+    }
 }
