--- a/src/styles/sections/hero.pcss
+++ b/src/styles/sections/hero.pcss
@@ -1,5 +1,5 @@
 .hero {
-    background: url("../images/bg/bg_main.jpg") top center no-repeat;
-    background-size: cover;
+    /* background: url("../images/bg/bg_main.jpg") top center no-repeat;
+    background-size: cover; */
     width: 100vw;
 }
