Made parallax effect

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,9 @@ body
                 +image('parallax/layer-01.png', 'parallax__image')
             .parallax__layer
                 +image('parallax/layer-02.png', 'parallax__image')
+                h1.hero-title.hero-title--parallax
+                    .hero-title__info Личный сайт веб разработчика
+                    .hero-title__name Сергей Дмитриев
             .parallax__layer
                 +image('parallax/layer-03.png', 'parallax__image')
             .parallax__layer
