--- a/src/sections/hero.pug
+++ b/src/sections/hero.pug
@@ -2,9 +2,9 @@ section.hero.parallax__layer
     .container.container__hero
         include header
 
-        h1.hero-title.hero-title--parallax
-            .hero-title__info Личный сайт веб разработчика
-            .hero-title__name Сергей Дмитриев
+        //- h1.hero-title.hero-title--parallax
+        //-     .hero-title__info Личный сайт веб разработчика
+        //-     .hero-title__name Сергей Дмитриев
 
         .scroll
             .scroll__title Скролл
