--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -7,6 +7,7 @@
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
+    perspective: 100px;
 
     &__layer {
         position: absolute;
@@ -18,11 +19,30 @@
 
     &__image {
         position: absolute;
+        /* bottom: 0;
+        left: 50%;
+        transform: translateX(-50%); */
+        min-width: 100%;
+        min-height: 100%;
+        /* -webkit-transform: translateX(-50%); */
+        /* transform: translateX(-50%); */
         object-fit: cover;
-        width: 100%;
-        height: 100%;
+        object-position: center 30%;
     }
 }
+
+$layers: 4;
+
+@for $layerNum from $layers through 1 {
+    .parallax__layer:nth-child(#{$layerNum}) {
+        $currentLayer: calc($layers - $layerNum);
+        $perspective: calc($currentLayer * -1 * 50px );
+        $scale: calc($currentLayer * .5 + 1);
+
+        transform: translateZ($perspective) scale($scale);
+    }
+}
+
 .maincontent {
     position: absolute;
     top: 100%;
