--- a/src/styles/blocks/hero-title.pcss
+++ b/src/styles/blocks/hero-title.pcss
@@ -49,7 +49,8 @@
 
     &--parallax {
         position: absolute;
-        top: 0%;
-        transform: translateY(200%);
+        top: 23%;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
