--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -15,6 +15,20 @@
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
+
+        &:nth-child(4) {
+            &:after {
+                content: "";
+                position: absolute;
+                z-index: 5;
+                left: 0;
+                bottom: 0;
+                height: 250px;
+                width: 100%;
+                background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,0.8) 40%, rgba(0,0,0,0) 100%);
+            }
+        }
     }
 
     &__image {
