--- a/src/styles/sections/about.pcss
+++ b/src/styles/sections/about.pcss
@@ -2,6 +2,8 @@
     background: url("../images/bg/bg_about.jpg") top center no-repeat;
     background-size: cover;
     width: 100vw;
+    position: relative;
+    z-index: 50;
 
     &__left {
         display: inline-block;
@@ -15,6 +17,16 @@
     }
     &__content {
         margin-bottom: 90px;
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90px;
+        background: linear-gradient(180deg, rgba(27,31,34,1) 0%, rgba(27,31,34,0.8) 40%, rgba(0,0,0,0) 100%);
     }
 
 }
