--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -37,7 +37,8 @@
         }
         &--above {
             stroke-width: 9px;
-            stroke-dasharray: 100 346;
+            stroke-dashoffset: 100;
+            stroke-dasharray: 371;
         }
     }
 }
