--- a/src/styles/blocks/button.pcss
+++ b/src/styles/blocks/button.pcss
@@ -37,12 +37,33 @@
         padding: 20px 90px;
         width: auto;
         height: auto;
-        background-image: linear-gradient(to right, #ea7400 0%, #f29400 100%);
+        background: linear-gradient(to right, #ea7400 0%, #f29400 100%);
         border: none;
         color: #fff;
         font-size: 18px;
         font-weight: 700;
         line-height: 48px;
         text-transform: uppercase;
+        position: relative;
+
+        &:before {
+            content: "Отправить";
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            position: absolute;
+            z-index: 1;
+            line-height: 88px;
+            transition: ease-in-out .2s;
+            background: linear-gradient(to right, #f29400 0%, #ea7400 100%);
+            opacity: 0;
+        }
+
+        &:hover {
+            &:before {
+                opacity: 1;
+            }
+        }
     }
 }
