--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -2,20 +2,31 @@
     position: relative;
     width: 100%;
 
-    &__image {
-        width: 100%;
-    }
-    &__small-image {
+    &__thumb {
         transition: ease-in-out .2s;
         border: 0 solid #f29400;
         display: inline-block;
-        cursor: pointer;
+        height: 100px;
+        width: 160px;
+        overflow: hidden;
 
-        &:hover {
+        &:hover, &_active {
             /* margin: 0 2px; */
             border: 3px solid #f29400;
             transition: ease-in-out .2s;
         }
+    }
+
+    &__thumb-link {
+
+    }
+
+    &__image {
+        width: 100%;
+    }
+    &__small-image {
+
+        
     }
     &__slider {
         padding: 60px;
@@ -27,10 +38,13 @@
         z-index: 2;
         right: 0;
     }
-}
-
-.slider {
-    &__number {
+    &__buttons {
+        position: absolute;
+        bottom: 60px;
+        right: -50px;
+    }
+    &:after {
+        content: attr(data-slide);
         color: #f0f0f0;
         font-size: 400px;
         font-weight: 900;
@@ -40,10 +54,5 @@
         right: -150px;
         position: absolute;
         z-index: -1;
-    }
-    &__buttons {
-        position: absolute;
-        bottom: 60px;
-        right: -50px;
     }
 }
