--- a/src/styles/blocks/tags.pcss
+++ b/src/styles/blocks/tags.pcss
@@ -1,10 +1,13 @@
 .tags {
     padding-bottom: 40px;
 
+    &__list {
+        display: inline-block;
+    }
+
     &__item {
         border-radius: 23px;
         background-color: rgba(122, 160, 197, .1);
-        display: inline-block;
         margin-right: 15px;
         margin-bottom: 15px;
         padding: 12px 20px;
